docs: add markdownlint and format all docs

--- a/docs/meeting/250409-design-0.md
+++ b/docs/meeting/250409-design-0.md
@@ -23,7 +23,7 @@ To decide on any initial considerations and specifications for this product.
 **Product Name:** EntangleNet
 **Tagline:** "Where voices connect instantly, everywhere"
 
-This name has been chosen to fit in with Skye's other products, and because it is thematically 
+This name has been chosen to fit in with Skye's other products, and because it is thematically
 linked to the purpose of the product.
 
 It has also been chosen because Skye is a big nerd, and so is Cephy.
@@ -32,8 +32,8 @@ It has also been chosen because Skye is a big nerd, and so is Cephy.
 
 ### Product Overview
 
-Voice chat software built for gaming guilds that focus on organized gameplay, e.g. milsim guilds 
-and organizations. 
+Voice chat software built for gaming guilds that focus on organized gameplay, e.g. mil-sim guilds
+and organizations.
 
 #### What the Product Will Achieve
 
@@ -44,12 +44,12 @@ This product/project will,
 - Transmit and Handle High Quality Audio
 - Be Highly Extensible (on both the client and server)
 - Allow for Extension Through
-    - Client and Server Plugins
-    - Server Bots
-    - Dot Config Files (e.g. RC files, etc)
-    - Hooks
-    - In-App GUI Based Settings and Options
-    - ETC
+  - Client and Server Plugins
+  - Server Bots
+  - DotConfig Files (e.g. RC files, etc)
+  - Hooks
+  - In-App GUI Based Settings and Options
+  - ETC
 - Allow for Permission Groups (server, channel, client)
 - Utilize Security Best Practices
 - Prioritize Personal and Data Privacy
@@ -64,28 +64,29 @@ By the release of version 1.0.0 this product will include the following features
 
 ##### Permission System and Groups
 
-- Tree based permision group systems
-    - Permission groups can inherit from others 
-    - Permission groups are grouped by their inheritance
+- Tree based permission group systems
+  - Permission groups can inherit from others
+  - Permission groups are grouped by their inheritance
 
 ##### Voice Channels and Text Chats
 
 - Each channel has an associated text chat
 - Users can start a text chat between each other, i.e. Private DM's
 - Channels are relational and have a hierarchy
-    - A channels permission systems inherits based on this hierarchy
-    - Each channel that is a child can,
-        - Inherit its parents password
-        - Define a new password for itself
-        - Disable the password requirement for itself
+  - A channels permission systems inherits based on this hierarchy
+  - Each channel that is a child can,
+    - Inherit its parents password
+    - Define a new password for itself
+    - Disable the password requirement for itself
 
 ##### Audio data, streams, and metadata
 
 All audio data streams will include base metadata that defines
+
 - The streams usage
 - Target of the streams
 - Information on how the target has been set
-- Permissions for the stream 
+- Permissions for the stream
 - Base audio codec data
 
 Users may extend the metadata with custom data, this may be done by,
@@ -94,17 +95,17 @@ Users may extend the metadata with custom data, this may be done by,
 - Modification of incoming data at a specific point
 - Modification of outgoing data, before sending
 
-The systems that allow for this extension of metadata should act similiarly to how an webserver's
+The systems that allow for this extension of metadata should act similarly to how an web-server's
 middleware handles incoming and outgoing requests.
 
-##### User Data 
+##### User Data
 
-Each user/client may set data that relates to how they want to be percieved inside of servers.
+Each user/client may set data that relates to how they want to be perceived inside of servers.
 
-When setting this data, a user may set this globally in an "account" like page, or at a server 
-specific level via using a system thats similiar to teamspeak's bookmark system.
+When setting this data, a user may set this globally in an "account" like page, or at a server
+specific level via using a system that's similar to TeamSpeak's bookmark system.
 
-A users server specific persona (user data) can be modified by a server owner, or its 
+A users server specific persona (user data) can be modified by a server owner, or its
 admin/moderator/staff team. These changes should be available to be made by the server team
 even if the user that is being modified is not connected to the server.
 
@@ -112,7 +113,7 @@ The types of data that we require, as a minimum, to be tracked are:
 
 - Username
 - Profile Picture
-- Tagline/Status
+- Tag line/Status
 - Bio/About Me
 
 #### Why This Product Has Been Created
@@ -153,13 +154,6 @@ This product will utilize the following 'Tech Stack',
     </tr>
 </table>
 
-<!--
-    <tr>
-        <td></td>
-        <td></td>
-    </tr>
--->
-
 <!-- ------------------------------------------------------------------------------------------- -->
 
 ### Development Environment Tech Stack
@@ -197,7 +191,7 @@ This project will utilize the following 'Tech Stack' for its development environ
     <tr>
         <td>API Documentation Generation</td>
         <td>DoxyGen</td>
-    </tr> 
+    </tr>
 </table>
 
 <!--
@@ -209,8 +203,6 @@ This project will utilize the following 'Tech Stack' for its development environ
 
 <!-- =========================================================================================== -->
 
-## Future Discussion Points 
-
+## Future Discussion Points
 
 <!-- =========================================================================================== -->
-
